Fixed the pwa (needed to add the actual snippet path); also aligned more with current design/website

--- a/assets/sass/0-mixins/palette-generator.scss
+++ b/assets/sass/0-mixins/palette-generator.scss
@@ -28,4 +28,5 @@
 }
 :root{
   @include generate-palette("red", oklch(0.4471 0.1585 29.82));
+  @include generate-palette("green", oklch(0.5928 0.151 137.92));
 }
